moved to ssh auth for flux_secrets repo

--- a/infra/base/sources/flux-secrets.yaml
+++ b/infra/base/sources/flux-secrets.yaml
@@ -8,4 +8,7 @@ spec:
   interval: 1m0s
   ref:
     branch: main
-  url: https://github.com/zanycadence/flux_secrets
+  secretRef:
+    name: flux-secrets
+  timeout: 1m0s
+  url: ssh://git@github.com/zanycadence/flux_secrets.git
